[package]
name = "integrators-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
num = "0.4.1"

[dev-dependencies]
clap = { version ="4.0", features = ["derive"] }
plotly = "0.8.4"
